smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-must-come-after-namespace.smithy
// Parse error at line 4, column 1 near `use`: A namespace must be defined before a use statement or shapes
$version: "1.0"

use smithy.example#Foo

namespace com.foo

string MyString
